--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ h1,h2,h3,h5,h6,p {
 }
 
 .header {
-   margin-bottom: 102px;
+   margin-bottom: 103px;
 }
 
 .logotype {
@@ -27,6 +27,7 @@ h1,h2,h3,h5,h6,p {
    color: #A69DB2;
    width: 35px;
    height: 26px;
+   text-decoration: none;
 }
 
 .logo-header {
@@ -37,13 +38,13 @@ h1,h2,h3,h5,h6,p {
 }
 
 .logo-text {
-
+   padding-left: 14px;
 }
 
 .logonft {
-   /* display: inline-block; */
-   /* width: 100%;
-   height: 100%; */
+   position: absolute;
+   width: 87px;
+   height: 26px;
 }
 
 .nft-text {
@@ -80,7 +81,7 @@ h1,h2,h3,h5,h6,p {
 }
 
 .main {
-
+   margin-top: 105px;
 }
 
 .main-header__title {
@@ -186,22 +187,42 @@ h1,h2,h3,h5,h6,p {
    height: 377px;
 }
 
-.wrapper-timer::before {
+/* .wrapper-timer::before {
    content: '';
    position: fixed;
    background: rgba(255, 255, 255, 0.3);
    filter: blur(4px);
    
-}
+} */
 
 .wrapper-timer {
    padding-top: 27px;
+   width: 336px;
+   height: 182px;
+   position: relative;
+   box-shadow: 1px 1px 4px rgb(14 14 14 / 30%);
+   border: 5px solid rgba(255, 255, 255, 0.15);
+   border-radius: 10px;
+   background: inherit;
+}
+
+.wrapper-timer::before {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   background: inherit;
+   filter: blur(5px);
 }
 
 .hero-account__title {
+   padding: 10px 5px 10px 0;
    font-family: 'Rajdhani';
    font-weight: 700;
    color: #fff;
+   font-size: 10px;
 }
 
 .hero-account__img {
@@ -214,10 +235,6 @@ h1,h2,h3,h5,h6,p {
    font-family: 'Rajdhani';
    font-weight: 600;
    color: #fff;
-}
-
-.hero-account__title {
-   padding: 10px 5px 10px 0;
 }
 
 .persone {
@@ -245,17 +262,26 @@ h1,h2,h3,h5,h6,p {
    height: 13px;
 }
 
+.timer {
+   font-family: 'Rajdhani';
+   font-weight: 600;
+   color: #fff;
+   display: flex;
+   flex-direction: column;
+   /* align-items: center; */
+}
+
 .hero-account__auction {
    padding: 18px 5px 10px 0;
    font-family: 'Rajdhani';
-   font-weight: 500;
+   font-weight: 400;
    color: #EDEAEF;
    font-size: 10px;
 }
 
 .hero-account__countdown {
    display: flex;
-   justify-content: center;
+   justify-content: space-between;
    align-items: center;
 }
 
@@ -264,4 +290,79 @@ h1,h2,h3,h5,h6,p {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   font-size: 17px;
+}
+
+.units {
+   font-size: 11px;
+}
+
+.hero-account__btn {
+   margin-top: 40px;
+}
+
+.btn-bid {
+   cursor: pointer;
+   font-size: 16px;
+   font-family: 'Rajdhani';
+   font-weight: 600;
+   color: #fff;
+   padding: 8px 45px 8px 10px;
+   outline : none;
+   border: none;
+   position: relative;
+   z-index: 2;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: linear-gradient(to right, #FF56F6, #43A5E3), linear-gradient(to right, #FF56F6, #43A5E3);
+   width: 120px;
+   height: 37px;
+   /* background-size: 100% 2px; */
+   background-position: 0 100%, 0 0;
+   background-repeat: no-repeat;
+   background-clip: border-box;
+   /* border-image: linear-gradient(to left,  #FF56F6, #43A5E3); */
+}
+
+/* .btn-bid:hover {
+   background: #e343be;
+   box-shadow: rgba(73, 5, 141, 0.95);
+} */
+
+/* .btn-bid::after {
+   content: '';
+   width: 25px;
+   height: 25px;
+   position: absolute;
+   border-left: 2px solid #ff56f6;
+   border-top: 2px solid #ff56f6;
+   top: 0;
+   left: 0;
+   border-radius: 5px 0 0 0;
+   transition: 0.5s;
+} */
+
+/* .btn-bid::before {
+   content: "";
+   position: absolute;
+   top: -2px;
+   bottom: -2px;
+   left: -2px;
+   right: -2px;
+   background: linear-gradient(to right, #FF56F6, #43A5E3);
+   border-radius: 4px;
+   z-index: -1;
+} */
+
+
+.partners {
+   margin-bottom: 217px;
+}
+
+.partners-block {
+   align-items: center;
+}
+
+.prtn-img {
+   height: 40px;
 }
